# DepthModel

./: .gitignore  CMakeLists.txt  Intersection.cpp  Intersector.cpp  Intersector.h  OpenImage.cpp  README.md  demo.cpp  devdata.yml  pch.h  structure.yml  testvid-camera-specs.txt
include/: Box.hpp  BruteForceModelBuilder.hpp  CameraRayCalculator.hpp  Intersector.h  ModelBuilder.hpp  ModelContainer.hpp  ModelPoint.hpp  Octree.hpp  PointBagInterface.hpp  PoseWrapper.hpp  RayLine.hpp  Triangle3D.hpp  Visualizer.hpp  geometry.hpp  iterateOctree.hpp  utils.hpp
src/: Box.cpp  BruteForceModelBuilder.cpp  CameraRayCalculator.cpp  Intersector.cpp  ModelBuilder.cpp  ModelContainer.cpp  ModelPoint.cpp  PoseWrapper.cpp  RayLine.cpp  Triangle3D.cpp  Visualizer.cpp  geometry.cpp  iterateOctree.cpp  utils.cpp
test/: Intersection.cpp
test/data/rubic/: config.json
test/integration/: Intersection.cpp
